# WordAgent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  claudecode.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  deploy-docs.yml
backend/: .env.example  README.md  langgraph.json  main.py  pyproject.toml
backend/app/: __init__.py  langgraph_dev_entry.py  main.py  publish.html  utils.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  db_models.py  doc.py
backend/app/services/: context.py  llm_client.py  memory.py  session_service.py  utils.py
backend/deploy/: package.spec  wence.spec
backend/evaluation/: README.md  __init__.py  dataset.py  evaluator_prompt.md  run.py  utils.py
backend/evaluation/outputs-example/: results.csv
backend/gui/: main.py
backend/gui/common/: __init__.py
backend/gui/resources/: manifest.xml
backend/gui/views/: __init__.py  home_interface.py  install_interface.py  main_window.py  office_install_interface.py  wps_install_interface.py
docs/: API_Price.md  claudecode.md  howclaudework.md
frontend/microsoft_word_plugin/: README.md  manifest.xml  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
frontend/microsoft_word_plugin/src/: App.vue  chatState.js  sessionState.js  (+1 more)
frontend/wps_word_plugin/: README.md  package.json  vite.config.js
web/: README.md  pnpm-lock.yaml
web/docs/: index.md
wence_backend/: .env  .env.example  README.md  both-main.py  main.py  main_packaged.py  pyproject.toml  requirements.txt  test_openai.py  wence_ai.spec
wence_backend/app/: agent.py  agent_langchain.py  agent_old.py  main.py  publish.html
wence_backend/app/api/: __init__.py  deps.py
wence_backend/app/api/routes/: README.md  chat copy.py  chat.py  health.py  history.py  models.py  sessions.py  settings.py
wence_backend/app/core/: agent.py  config.py  db.py
wence_backend/app/models/: chat.py  db_models.py  doc.py
wence_backend/app/services/: __init__.py  agent copy.py  agent.py  agent_multi_node.py  agent_old.py  chat_history.py  llm_client.py  session_service.py
wence_backend/app/services/agent/: agent.py  agent_sub.py  prompts.py  prompts_sub.py  tools.py  tools_sub.py
wence_backend/app/services/agent/skills/: ask_mode_limit.md  execution_rules.md  generate_document.md  identity.md  no_tool_scenario.md  query_document.md  read_document.md  style.md  tool_strategy.md  web_tools.md
wence_backend/app/services/multi_agent/: agent.py  tools.py
wence_backend/app/services/multi_agent/skills/outline_agent/: outline.md
wence_backend/app/services/multi_agent/skills/planner_agent/: planner.md
wence_backend/app/services/multi_agent/skills/reviewer_agent/: reviewer.md
wence_backend/app/services/multi_agent/skills/writer_agent/: writer.md
wence_backend/config/: config.json  user_settings.json
wence_backend/data/: README.md
wence_backend/deploy/: build_linux.sh  build_windows.ps1  wence-ai.service  wence.spec
wence_backend/example/: 2025年12月28日-毕设任务书-计科2205班-蔡明辰-基于多智能体协作的 AI 辅助写作系统设计与实现.doc  gen.json  origin.json  word.json
wence_backend/gui/: main copy.py  main.py
wence_backend/gui/common/: __init__.py  config.py  style_sheet.py
wence_backend/gui/components/: __init__.py
wence_backend/gui/resources/: publish.html
wence_backend/gui/views/: __init__.py  chat_interface.py  console_interface.py  home_interface.py  install_interface.py  main_window.py  setting_interface.py
wence_backend/static/: index.html  manifest.xml
wence_backend/static/assets/: AIChatPane-B2mvDq_R.css  AIChatPane-DiuP6tla.js  SettingPane-BHzqZpNu.js  SettingPane-JghzeTtm.css  TaskPane-DIs0_PGx.css  TaskPane-lShCDAwj.js  index-BP3FsJdK.js
wence_backend/static/plugin/: manifest.xml  ribbon.xml
wence_backend/test/: test_langchain_stream.py  test_langgraph.py  test_openai.py  test_openai_models.py  test_stream.py  test_zhipu.py  test_zhipu_models.py
wence_frontend/wence_word_plugin/: .eslintrc.cjs  .gitignore  README.md  index.html  manifest.xml  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
(+282 files in other folders)
